<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vilib_catkin</name>
  <version>1.0.0</version>
  <description>wrapper package for vilib</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache-2</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
